--- a/views/attendee.ejs
+++ b/views/attendee.ejs
@@ -24,8 +24,8 @@
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
 					<div class="form-group">
-						<label for="name">Name</label>
-						<input type="text" class="form-control" id="name" name="name" required>
+						<label for="name">First Name</label>
+						<input type="text" class="form-control" id="fname" name="fname" required>
 					</div>
 				</div>
 				<div class="col-md-4"></div>
@@ -34,7 +34,17 @@
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
 					<div class="form-group">
-						<label for="email">Email</label>
+						<label for="name">Last Name</label>
+						<input type="text" class="form-control" id="lname" name="lname" required>
+					</div>
+				</div>
+				<div class="col-md-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label for="email">Email Address</label>
 						<input type="email" class="form-control" id="email" name="email" required></div>
 				</div>
 				<div class="col-md-4"></div>
@@ -52,8 +62,44 @@
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
 					<div class="form-group">
-						<label for="school">School</label>
-						<input type="school" class="form-control" id="school" name="school"></div>
+						<label for="school">Institution</label>
+						<input type="school" class="form-control" id="institution" name="institution"></div>
+				</div>
+				<div class="col-md-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label for="school">Institution City</label>
+						<input type="school" class="form-control" id="institutionc" name="institutionc"></div>
+				</div>
+				<div class="col-md-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label for="school">Institution State</label>
+						<input type="school" class="form-control" id="institutions" name="institutions"></div>
+				</div>
+				<div class="col-md-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label for="school">Zip Code</label>
+						<input type="school" class="form-control" id="zipcode" name="zipcode"></div>
+				</div>
+				<div class="col-md-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label for="school">Country</label>
+						<input type="school" class="form-control" id="country" name="country"></div>
 				</div>
 				<div class="col-md-4"></div>
 			</div>
@@ -74,21 +120,13 @@
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
 					<div class="form-group">
-						<label for="Food">Food(Specify Veg or Non-Veg)</label><br>
-						<input type="radio" name="food" value="Veg">Veg<br>
-						<input type="radio" name="food" value="Non-Veg">Non-Veg<br>
+						<label for="Food">Food</label><br>
+						<input type="radio" name="food" value="Vegetarian">Vegetarian<br>
+						<input type="radio" name="food" value="Regular">Regular<br>
+						<input type="radio" name="food" value="Gluten Free">Gluten Free<br>
 						<div class="col-md-4"></div>
 					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
-					<div class="form-group">
-						<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
-						<input type="restrict" class="form-control" id="restrict" name="restrict"></div>
-				</div>
-				<div class="col-md-4"></div>
 			</div>
 			<div class="row">
 				<div class="col-md-4"></div>
