Add minor changes as client suggested

--- a/views/UpdateFeeDetails.ejs
+++ b/views/UpdateFeeDetails.ejs
@@ -9,12 +9,12 @@
 <form method="POST" action="/fee" >
     <div class="form-group">
         <div class="col-md-3">
-    <label for = "Programname">Registarion Type:</label></div>
+    <label for = "Programname">Registration type:</label></div>
     <div class="col-md-3">
     <input type="text" name="rates" id="rates"/></div></div><br><br>
     <div class="form-group">
         <div class="col-md-3">
-    <label for = "fee">Registarion fee:</label></div>
+    <label for = "fee">Registration fee:</label></div>
     <div class="col-md-2">
     <input type="number" name="fee" id="fee"/></div></div><br>
     <div class="form-group">
