--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -24,13 +24,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <label for="Email id">Email id</label>
+                    <label for="Email id">Email address</label>
                     <div class="form-group">
                         <input type="text" class="form-control" name="mail" placeholder="Enter email id..">
                     </div>
                 </div>
                 <div class="row">
-                    <label for="subject">Subject</label>
+                    <label for="subject">Message</label>
                     <div class="form-group">
                         <textarea id="subject" class="form-control" name="subject" placeholder="Write something.."></textarea>
                     </div>
