--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -114,7 +114,7 @@
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
 					<div class="form-group">
-						<label for="contact">Contact Number</label>
+						<label for="contact">Mobile Number</label>
 						<input type="text" class="form-control" id="contact" name="contact" required></div>
 				</div>
 				<div class="col-md-4"></div>
