--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -14,9 +14,9 @@
     <table class="w3-table-all w3-card-4" id="t" align="center">
         <thead>
                 <tr >
-                        <th>Registarion Type</th>
-                        <th>Registarion fee</th> 
-                        <th>What included?</th>
+                        <th>Registration type</th>
+                        <th>Registration fee</th> 
+                        <th>What is included?</th>
                        
                       </tr>
       </thead>      
@@ -43,15 +43,10 @@
       <br>
       <br>
       
-<p>We are conducting several programs in this conference</p>
 
-  <body>
-    <br>
-    <br>
-    <br>
     <p>We are conducting several programs in this conference</p>
 
-    <p>To register for the conference click on the registration tab and select the category you deserve</p>
+    <p>To register for the conference click on the registration tab and select the category you desire</p>
 
     <marquee behaviour="alternate" direction="left">Hurry up and register early for the conference with reduced fee</marquee>
   </body>
