--- a/views/admincontact.ejs
+++ b/views/admincontact.ejs
@@ -23,6 +23,7 @@
               <th>Last Name</th>
               <th>Email</th>
               <th>Subject</th>
+              <th>Reply</th>
 
             </tr>
             <% for(let i = 0; i < list.length; i++) { %>
@@ -37,11 +38,21 @@
                   <%= list[i].lastname %>
                 </td>
                 <td>
-                  <%= list[i].mail %>
+                  <%= list[i].email %>
                 </td>
                 <td>
                   <%= list[i].subject %>
                 </td>
+                <form action="/reply" method="POST">
+                  <input type="text" name="reply" value="<%= list[i].reply %>" hidden>
+                  
+                  <%if(list[i].reply ==0){%>
+                    <td><button type="submit" class="btn btn-success">Reply</button></td>
+                    <%}%>
+                      <%if(list[i].reply !=0){%>
+                        <td><button disabled class="btn btn-success">Replied</button></td>
+                        <%}%>
+                </form>
                 <%}%>
                   </form>
               </tr>
