--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -26,7 +26,7 @@
                 <div class="row">
                     <label for="Email id">Email address</label>
                     <div class="form-group">
-                        <input type="text" class="form-control" name="mail" placeholder="Enter email id..">
+                        <input type="text" class="form-control" name="email" placeholder="Enter email id..">
                     </div>
                 </div>
                 <div class="row">
@@ -38,9 +38,11 @@
                 <br>
                 <div class="row">
 
-                    <input type="submit" value="Submit" onclick="myFunction()" class="btn btn-primary">
+                    <input type="submit" value="Submit" class="btn btn-primary">
                 </div>
+                <input type="text" name="reply" hidden>
             </form>
+           
         </div>
 
     </body>
