Fix forgot password issues

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -28,6 +28,10 @@
             <div class="alert alert-danger">{{info_msg}}</div>
           {{/if}}
 
+           {{#if message}}
+            <div class="alert alert-danger">{{message}}</div>
+          {{/if}}
+
 
           
           {{{body}}}
