--- a/views/forgotP.ejs
+++ b/views/forgotP.ejs
@@ -6,12 +6,13 @@
   <div class="col-md-4">
     <div class="form-group">
       <label>New Password</label>
-      <input type="password" class="form-control" name="npassword" placeholder="Password" required>
+      <input type="password" class="form-control" name="password" placeholder="Password" required>
     </div>
     <div class="form-group">
       <label>Confirm Password</label>
       <input type="password" class="form-control" name="cpassword" placeholder="Password" required>
     </div>
+    <input type="hidden" name="token" value="<%= token %>"/>
     <div class="row">
       <div class="col-md-4"></div>
       <div class="col-md-4">
