--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -17,7 +17,7 @@
 {{{body}}} 
 </div>
 </div>
-<form method="post" action="/users/login">
+<form method="post" action='/users/register'>
 <div class="col-md-4"></div>
 <div class="col-md-4">
    <div class="form-group">
@@ -34,11 +34,11 @@
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password" minlength="6" required>
+    <input type="password" class="form-control" placeholder="Password" name="password"  required>
   </div>
   <div class="form-group">
     <label>Confirm Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password2" minlength="6" required>
+    <input type="password" class="form-control" placeholder="Password" name="password2"  required>
   </div>
   <div class="col-md-3"></div> 
  <a href='/users/login'><button class="btn btn-primary" type="button" value="Go Back" >Go Back</button></a>
