Add Participants total food count at admin side

--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -20,6 +20,7 @@
             <li> <a class="navbar-brand active" href="/AdminPresenter">Presenter &nbsp;</a>   </li>
             <li> <a class="navbar-brand active" href="adminvendor">Vendor &nbsp;</a> </li>
             <li> <a class="navbar-brand active" href="Add">Add Programs &nbsp;</a> </li>
+            <li> <a class="navbar-brand active" href="/foodcount">Participant Food Count &nbsp;</a> </li>
             <li> <a class="navbar-brand active" href="admincontact">User Queries &nbsp;</a> </li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Update Info <span class="caret"></span></a>
               <ul class="dropdown-menu">
