--- a/views/adminvendor.ejs
+++ b/views/adminvendor.ejs
@@ -20,7 +20,7 @@
           <th>Contact Name</th>
           <th>Contact Title</th>
           <th>Email</th>
-          <th>Mobile Number</th>
+          <th>Contact Phone</th>
           
         </tr>
         
