Add downloadable link for presentation document

--- a/views/AdminPresenter.ejs
+++ b/views/AdminPresenter.ejs
@@ -52,7 +52,7 @@
                   <%= list[i].topic %>
                 </td>
                 <td>
-                  <%= list[i].attach %>
+                 <a href="<%= list[i].attach %>"><%= list[i].attach %></a>
                 </td>
                 <td>
                   <%= list[i].food %>
