--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -75,8 +75,8 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="attach">If document is not ready, Please email to @nwmissouri once registered.</label>
-						<form action="index.php" method="post" enctype="multipart/form-data">
-							<input type="file" name="attach"></div>
+						<!-- <form action="index.php" method="post" enctype="multipart/form-data"></form> -->
+							<input type="" name="attach"></div>
 				</div>
 				<div class="col-md-4"></div>
 			</div>
