--- a/views/foodcount.ejs
+++ b/views/foodcount.ejs
@@ -4,13 +4,13 @@
     <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
   </head>
 
-<h3>Attendee(Attendees, Graduate students, Faculty</h3>
+<h3>Attendees(Attendees, Graduate students, Faculty)</h3>
 <p>Regular:  <%= regular %></p>
 <p>Vegetarian:  <%= veg %></p>
 <p>Gluten-Free:  <%= gluten %></p>
 
 
-<h3>Presenter</h3>
+<h3>Presenters</h3>
 <p>Regular:  <%= regularp %></p>
 <p>Vegetarian:  <%= vegp %></p>
 <p>Gluten-Free:  <%= glutenp %></p>
