--- a/views/Paymentthroughcheck.ejs
+++ b/views/Paymentthroughcheck.ejs
@@ -7,81 +7,95 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="Anusha Chowdary Kollu.css" />
+	<link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title> .EDU Conference </title>
 </head>
 
 <body>
-	<div class="container">
-		<div class="page-header">
+	<div class="container" align="center">
+		<h2>Northwest Missouri State University</h2>
+		<p>800 University Drive, OL246<br> Maryville, MO 64468<br> http://nwmissouri.edu/dotedu/
+		</p>
+	</div>
+	<br>
+	<br>
+	<div class="row">
+		<div class="col-md-1"></div>
+		<div class="col-md-2">
+			 <h4><b>Bill to: </b></h4>
+              <p> Name: <br>
+                School Name: <br>
+                Address: </b> </p>
 		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-2"></div>
-				<div class="col-md-8">
-					<h2>Payment through Check</h2>
-				</div>
-				<div class="col-md-2"></div>
-			</div>
-			<div class="row">
-				<div class="col-md-2"></div>
-				<div class="col-md-8">
-					<p>Please fill the below details</p>
-				</div>
-				<div class="col-md-2"></div>
-			</div>
-			<form method="POST" action="views" role="form">
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
-					<div class="form-group">
-						<label for="name">Name</label>
-						<input type="text" class="form-control" id="name" name="name" required>
-					</div>
-				</div>
-				<div class="col-md-4"></div>
-			</div>
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
-					<div class="form-group">
-						<label for="check number">Check Number</label>
-						<input type="text" class="form-control" id="check number" name="check number" required></div>
-				</div>
-				<div class="col-md-4"></div>
-			</div>
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
-					<div class="form-group">
-						<label for="name of the bank">Name of the bank</label>
-						<input type="text" class="form-control" id="name of the bank" name="name of the bank" required></div>
-				</div>
-				<div class="col-md-4"></div>
-			</div>
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
-					<div class="form-group">
-						<label for="Date">Date</label>
-						<input type="Date" class="form-control" id="Date" name="Date" required></div>
-				</div>
-				<div class="col-md-4"></div>
-			</div>
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-3">
-						<button type="submit" class="btn btn-primary ">Submit</button>					
-				</div>
-			</form>
-				<div class="col-md-3">
-						<a href='/'><button class="btn btn-primary" type="button" value="Go Back" >Go Back</button></a>
-					<!-- <input class="btn btn-warning " type="button" onClick="location.href='/'" value='Back'> -->
-				</div>
-			</div>
+	</div>
+	<br>
+	<br>
+	<table id="update" align="center">
+		<tr>
+			<th>Description</th>
+			<th>Price</th>
+			<th>Quantity</th>
+			<th>Amount</th>
 
-		</div>
-		
+		</tr>
+		<tr>
+			<td>Early Bird Registration</td>
+			<td>$ 125.00</td>
+			<td>1</td>
+			<td> $ 125.00</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+
+		<tr>
+			<td></td>
+			<td></td>
+			<td>Total</td>
+			<td>$ 125.00</td>
+		</tr>
+	</table>
+	<br><br>
+
+	<br><br>
+	<div class="col-md-1"></div>
+	<div class="col-md-4">
+		<p><b>Make Checks Payable To: </b>
+			<br> Northwest Missouri State University<br></p>
+
+			<p> Please include a copy of this invoice with your payment!<br>
+			If you have any questions regarding this invoice,<br></p>
+			<b>Please contact</b> <br>
+				Darla Runyon
+				<br> 660-562-1532
+				<br> drunyon@nwmissouri.edu
+
+				<br>
+			</div>
+				<div align="center">
+									
+					<button type="button" class="btn btn-success" onclick="window.print()"> Print </button>
+                </div>
+				
+	
+
+
 </body>
 
 </html>
