Add Invoice page

--- a/views/Paymentthroughcheck.ejs
+++ b/views/Paymentthroughcheck.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +10,6 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title> .EDU Conference </title>
 </head>
-
 <body>
 	<div class="container" align="center">
 		<h2>Northwest Missouri State University</h2>
@@ -23,10 +21,9 @@
 	<div class="row">
 		<div class="col-md-1"></div>
 		<div class="col-md-2">
-			 <h4><b>Bill to: </b></h4>
-              <p> Name: <br>
-                School Name: <br>
-                Address: </b> </p>
+			<h4><b>Bill to: </b></h4>
+			<p> Name: <br> School Name: <br> Address: </b>
+			</p>
 		</div>
 	</div>
 	<br>
@@ -51,18 +48,7 @@
 			<td></td>
 			<td></td>
 		</tr>
-		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>
-			</tr>
+	
 
 		<tr>
 			<td></td>
@@ -72,30 +58,18 @@
 		</tr>
 	</table>
 	<br><br>
-
-	<br><br>
 	<div class="col-md-1"></div>
 	<div class="col-md-4">
 		<p><b>Make Checks Payable To: </b>
 			<br> Northwest Missouri State University<br></p>
-
-			<p> Please include a copy of this invoice with your payment!<br>
-			If you have any questions regarding this invoice,<br></p>
-			<b>Please contact</b> <br>
-				Darla Runyon
-				<br> 660-562-1532
-				<br> drunyon@nwmissouri.edu
-
-				<br>
-			</div>
-				<div align="center">
-									
-					<button type="button" class="btn btn-success" onclick="window.print()"> Print </button>
-                </div>
-				
-	
-
-
+		<p> Please include a copy of this invoice with your payment!<br> If you have any questions regarding this invoice,<br></p>
+		<b>Please contact</b> <br> Darla Runyon
+		<br> 660-562-1532
+		<br><a href="drunyon@nwmissouri.edu">drunyon@nwmissouri.edu</a>
+		<br>
+	</div>
+	<div align="center">
+		<button type="button" class="btn btn-success btn-md" onclick="window.print()"> Print </button>
+	</div>
 </body>
-
 </html>
