--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,11 +9,11 @@
 <div class="col-md-4">
   <div class="form-group">
     <label>Username</label>
-    <input type="text" class="form-control" name="username" placeholder="Username" required>
+    <input type="text" class="form-control" name="username" placeholder="Username" pattern="^[a-zA-Z0-9_-!#$%&*@]{1,15}$" required>
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" class="form-control" name="password" placeholder="Password" required>
+    <input type="password" class="form-control" name="password" placeholder="Password" pattern="^[a-zA-Z0-9_-!#$%&*@]$" required>
   </div>
 <br>
  <div class="row">
