Make changes based on clients feedback

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -24,9 +24,9 @@
                     </div>
                 </div>
                 <div class="row">
-                    <label for="Email id">Email address</label>
+                    <label for="Email address">Email address</label>
                     <div class="form-group">
-                        <input type="text" class="form-control" name="email" placeholder="Enter email id..">
+                        <input type="text" class="form-control" name="email" placeholder="Enter email address">
                     </div>
                 </div>
                 <div class="row">
