--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
           <li><a class="active" href="attendee">Attendee</a></li>
           <li><a class="active" href="presenter">Presenter</a></li>
           <li><a class="active" href="Graduatestudent">Graduate Student</a></li>
-          <li><a class="active" href="faculty">Faculty</a></li>
+          <li><a class="active" href="faculty">Northwest Faculty</a></li>
           <li><a class="active" href="vendor">Vendor</a></li>
         </ul>
       </li>
