--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <ul class="nav navbar-nav">
-            <li> <a class="navbar-brand active" href="adminattendee">&nbsp;Attendee &nbsp;</a> </li>
+            <li> <a class="navbar-brand active" href="/adminattendee">&nbsp;Attendee &nbsp;</a> </li>
             <li> <a class="navbar-brand active" href="/AdminPresenter">Presenter &nbsp;</a>   </li>
             <li> <a class="navbar-brand active" href="adminvendor">Vendor &nbsp;</a> </li>
             <li> <a class="navbar-brand active" href="Add">Add Programs &nbsp;</a> </li>
