--- a/views/attendee.ejs
+++ b/views/attendee.ejs
@@ -133,4 +133,5 @@
 				<div class="col-md-4">
 					<button type="submit" class="btn btn-primary">Submit</button></div>
 				<div class="col-md-4"></div>
+				<input type="text" name="reply" hidden>
 		</form>
