--- a/views/Graduatestudent.ejs
+++ b/views/Graduatestudent.ejs
@@ -132,5 +132,6 @@
 				<div class="col-md-4">
 					<button type="submit" class="btn btn-primary">Sumbit</button></div>
 				<div class="col-md-4"></div>
+				<input type="text" name="reply" hidden>
 		</form>
 		</div>
