--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -129,5 +129,6 @@
 				<div class="col-md-4">
 					<button type="submit" class="btn btn-primary" id="coupon1">Submit</button></div>
 				<div class="col-md-4"></div>
+				<input type="text" name="reply" hidden>
 		</form>
 		</div>
