--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -49,7 +49,7 @@
 									<input type="email" class="form-control" name="email1" id="email1" required>
 								</div>
 								<div class="ven">
-									<button type="submit" class="btn btn-primary">Submit</button></div>
+									<button type="submit" name="genterate" class="btn btn-primary">Submit</button></div>
 								<div class="modal-footer">
 								</div>
 							</div>
@@ -127,7 +127,7 @@
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
-					<button type="submit" class="btn btn-primary" id="coupon1">Submit</button></div>
+					<button type="submit" name="submit" class="btn btn-primary" id="coupon1">Submit</button></div>
 				<div class="col-md-4"></div>
 				<input type="text" name="reply" hidden>
 		</form>
