--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -130,5 +130,6 @@
 					<button type="submit" name="submit" class="btn btn-primary" id="coupon1">Submit</button></div>
 				<div class="col-md-4"></div>
 				<input type="text" name="reply" hidden>
+				<input type="text" name="pay" hidden>
 		</form>
 		</div>
