--- a/views/Graduatestudent.ejs
+++ b/views/Graduatestudent.ejs
@@ -133,5 +133,6 @@
 					<button type="submit" class="btn btn-primary">Sumbit</button></div>
 				<div class="col-md-4"></div>
 				<input type="text" name="reply" hidden>
+				<input type="text" name="pay" hidden>
 		</form>
 		</div>
