--- a/views/attendee.ejs
+++ b/views/attendee.ejs
@@ -134,4 +134,5 @@
 					<button type="submit" class="btn btn-primary">Submit</button></div>
 				<div class="col-md-4"></div>
 				<input type="text" name="reply" hidden>
+				<input type="text" name="pay" hidden>
 		</form>
