Add drop database functionality.

--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -29,6 +29,7 @@
                   <a href="/Deadline">Update Deadlines</a>
                 </ul>
               </li>
+              <li> <a class="navbar-brand active" style="color:red" href="deletedatabase">Delete Database</a> </li>
               
         </ul>
             <li class="pull-right">
