--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -117,6 +117,7 @@
 		<div class="col-md-4"></div>
 		<input type="text" name="confirm" hidden>
 		<input type="text" name="delete" hidden>
+		<input type="text" name="pay" hidden>
 		</form>
 	</div>
 	
