--- a/views/adminvendor.ejs
+++ b/views/adminvendor.ejs
@@ -21,6 +21,7 @@
           <th>Contact Title</th>
           <th>Email</th>
           <th>Contact Phone</th>
+          <th>Payment status</th>
           
         </tr>
         
@@ -36,7 +37,16 @@
       <td><%= list[i].Title %></td>
       <td><%= list[i].email %></td>
       <td><%= list[i].contact %></td>
-     
+      <form action="/vendorpay" method="POST">
+        <input type="text" name="pay" value="<%= list[i].pay %>" hidden>
+        
+        <%if(list[i].pay ==0){%>
+          <td><button type="submit" class="btn btn-success">pay</button></td>
+          <%}%>
+            <%if(list[i].pay !=0){%>
+              <td><button disabled class="btn btn-success">paid</button></td>
+              <%}%>
+      </form>
     </tr>
     <% } %>
   </table>
