--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -124,5 +124,6 @@
 				<div class="col-md-4">
 					<button type="submit" class="btn btn-primary">Submit</button></div>
 				<div class="col-md-4"></div>
+				<input type="text" name="pay" hidden>
 		</form>
 		</div>
