Add testing for program details

--- a/views/UpdateProgramDetails.ejs
+++ b/views/UpdateProgramDetails.ejs
@@ -40,7 +40,7 @@
                                 </div><br>
                                 <div align="center" class="form-group">
                                         <div class="col-md-7">
-                                                <input type="submit" class="btn btn-primary" value="ADD" /></div><br><br>
+                                                <input type="submit" name="ADD" class="btn btn-primary" value="ADD" /></div><br><br>
                                 </div>
                 </div>
                 </form>
@@ -85,7 +85,7 @@
         </table><br>
         <form action="/pgmmail" method="POST" align="center">  
                 
-                <button type="submit" onclick="myFunction()" class="btn btn-success">Submit</button>
+                <button type="submit" name="submit" onclick="myFunction()" class="btn btn-success">Submit</button>
         </form>
         <script>
                 function myFunction() {
