--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -40,7 +40,7 @@
 								<!-- Modal Header -->
 								<div class="modal-header">
 									<h3 class="modal-title">Enter email for coupon code</h3>
-									<button type="button" class="close" data-dismiss="modal">&times;</button>
+									<button type="button" name="genterate"class="close" data-dismiss="modal">&times;</button>
 								</div>
 
 								<!-- Modal body -->
@@ -49,7 +49,7 @@
 									<input type="email" class="form-control" name="email1" id="email1" required>
 								</div>
 								<div class="ven">
-									<button type="submit" name="genterate" class="btn btn-primary">Submit</button></div>
+									<button type="submit" name="save" class="btn btn-primary">Submit</button></div>
 								<div class="modal-footer">
 								</div>
 							</div>
