Add validations for presenter page

--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -24,7 +24,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="name">First Name</label>
-						<input type="text" class="form-control" id="fname" name="fname" required>
+						<input type="text" class="form-control" id="fname" name="fname" pattern="[a-zA-Z ]+" required>
 					</div>
 				</div>
 				<div class="col-md-4"></div>
@@ -34,7 +34,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="name">Last Name</label>
-						<input type="text" class="form-control" id="lname" name="lname" required>
+						<input type="text" class="form-control" id="lname" name="lname" pattern="[a-zA-Z ]+" required>
 					</div>
 				</div>
 				<div class="col-md-4"></div>
@@ -44,7 +44,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="email">Email Address</label>
-						<input type="email" class="form-control" id="email" name="email" required></div>
+						<input type="email" class="form-control" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$+" required></div>
 				</div>
 				<div class="col-md-4"></div>
 			</div>
@@ -53,7 +53,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="contact">Contact Number</label>
-						<input type="text" class="form-control" id="contact" name="contact" required></div>
+						<input type="text" class="form-control" id="contact" name="contact" pattern="[0-9]{10}" required></div>
 				</div>
 				<div class="col-md-4"></div>
 			</div>
@@ -62,7 +62,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="level">Target Audience</label>
-						<input type="" class="form-control" id="target" name="target" required></div>
+						<input type="" class="form-control" id="target" name="target" pattern="[a-zA-Z ]+"required></div>
 				</div>
 				<div class="col-md-4"></div>
 			</div>
@@ -86,7 +86,7 @@
 					<div class="form-group">
 						<label for="attach">If document is not ready, Please email to @nwmissouri once registered.</label>
 						<!-- <form action="index.php" method="post" enctype="multipart/form-data"></form> -->
-							<input type="" name="attach"></div>
+							<input type="" name="attach""[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$+"></div>
 				</div>
 				<div class="col-md-4"></div>
 			</div>
